--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Keeping us mobile.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="webview_part2">
+  <meta name="apple-mobile-web-app-status-bar-style" content="purple-translucent">
+  <meta name="apple-mobile-web-app-title" content="Bimbala">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>webview_part2</title>
+  <title>Bimbala</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
